divagations/azare2c/lexer.cpp
/* Generated by re2c 4.3 on Sat Nov 22 06:30:29 2025 */
#line 1 "lexer.re"
/*
 * Azadi Lexer - re2c implementation
 * Generated based on Rust implementation.
 * Special character assumed to be '%'.
 */

#include "lexer.h"
#include <iostream>

Lexer::Lexer(const char *input, size_t len) {
    cursor = input;
    limit = input + len;
    marker = input;
    token_start = input;
    state_stack.push_back(BLOCK);
}

Token Lexer::next_token() {
    if (state_stack.empty()) return {TOK_EOF, ""};
    
    State current_state = state_stack.back();
    token_start = cursor;

    // re2c variables
    const char *YYCURSOR = cursor;
    const char *YYMARKER = marker;
    const char *YYLIMIT = limit;
    
    // We use a computed goto or switch based on state
    switch (current_state) {
        case BLOCK: goto yy_BLOCK;
        case MACRO: goto yy_MACRO;
        case COMMENT: goto yy_COMMENT;
    }

yy_BLOCK:
    
#line 41 "lexer.cpp"
{
	unsigned char yych;
	yych = *cursor;
	switch (yych) {
		case 0x00: goto yy1;
		case '%': goto yy4;
		default: goto yy2;
	}
yy1:
	++cursor;
#line 51 "lexer.re"
	{ return {TOK_EOF, ""}; }
#line 54 "lexer.cpp"
yy2:
	yych = *++cursor;
	switch (yych) {
		case 0x00:
		case '%': goto yy3;
		default: goto yy2;
	}
yy3:
#line 90 "lexer.re"
	{ return {TOK_TEXT, std::string(token_start, cursor)}; }
#line 65 "lexer.cpp"
yy4:
	yych = *(marker = ++cursor);
	switch (yych) {
		case '#': goto yy6;
		case '%': goto yy8;
		case '(': goto yy9;
		case '-': goto yy11;
		case '/': goto yy12;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy13;
		case '{': goto yy14;
		case '}': goto yy15;
		default: goto yy5;
	}
yy5:
#line 87 "lexer.re"
	{ return {TOK_TEXT, "%"}; }
#line 134 "lexer.cpp"
yy6:
	yych = *++cursor;
	switch (yych) {
		case 0x00: goto yy7;
		case '\n': goto yy16;
		default: goto yy6;
	}
yy7:
#line 65 "lexer.re"
	{ return {TOK_LINE_COMMENT, std::string(token_start, cursor)}; }
#line 145 "lexer.cpp"
yy8:
	++cursor;
#line 70 "lexer.re"
	{ return {TOK_SPECIAL, "%%"}; }
#line 150 "lexer.cpp"
yy9:
	yych = *++cursor;
	switch (yych) {
		case ')':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy10;
		default: goto yy18;
	}
yy10:
	cursor = marker;
	goto yy5;
yy11:
	yych = *++cursor;
	switch (yych) {
		case '-': goto yy19;
		default: goto yy10;
	}
yy12:
	yych = *++cursor;
	switch (yych) {
		case '*': goto yy21;
		case '/': goto yy22;
		default: goto yy10;
	}
yy13:
	yych = *++cursor;
	switch (yych) {
		case '(': goto yy24;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy13;
		case '{': goto yy25;
		case '}': goto yy26;
		default: goto yy10;
	}
yy14:
	++cursor;
#line 55 "lexer.re"
	{ 
        state_stack.push_back(BLOCK);
        return {TOK_BLOCK_OPEN, "%{"}; 
    }
#line 261 "lexer.cpp"
yy15:
	++cursor;
#line 59 "lexer.re"
	{
        if (state_stack.size() > 1) state_stack.pop_back();
        return {TOK_BLOCK_CLOSE, "%}"};
    }
#line 269 "lexer.cpp"
yy16:
	++cursor;
	goto yy7;
yy17:
	yych = *++cursor;
yy18:
	switch (yych) {
		case ')': goto yy27;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy17;
		default: goto yy10;
	}
yy19:
	yych = *++cursor;
	switch (yych) {
		case 0x00: goto yy20;
		case '\n': goto yy28;
		default: goto yy19;
	}
yy20:
#line 64 "lexer.re"
	{ return {TOK_LINE_COMMENT, std::string(token_start, cursor)}; }
#line 353 "lexer.cpp"
yy21:
	++cursor;
#line 66 "lexer.re"
	{
        state_stack.push_back(COMMENT);
        return {TOK_COMMENT_OPEN, "%/*"};
    }
#line 361 "lexer.cpp"
yy22:
	yych = *++cursor;
	switch (yych) {
		case 0x00: goto yy23;
		case '\n': goto yy29;
		default: goto yy22;
	}
yy23:
#line 63 "lexer.re"
	{ return {TOK_LINE_COMMENT, std::string(token_start, cursor)}; }
#line 372 "lexer.cpp"
yy24:
	++cursor;
#line 81 "lexer.re"
	{
        state_stack.push_back(MACRO);
        return {TOK_MACRO, std::string(token_start, cursor)};
    }
#line 380 "lexer.cpp"
yy25:
	++cursor;
#line 73 "lexer.re"
	{
        state_stack.push_back(BLOCK);
        return {TOK_BLOCK_OPEN, std::string(token_start, cursor)};
    }
#line 388 "lexer.cpp"
yy26:
	++cursor;
#line 77 "lexer.re"
	{
        if (state_stack.size() > 1) state_stack.pop_back();
        return {TOK_BLOCK_CLOSE, std::string(token_start, cursor)};
    }
#line 396 "lexer.cpp"
yy27:
	++cursor;
#line 54 "lexer.re"
	{ return {TOK_VAR, std::string(token_start, cursor)}; }
#line 401 "lexer.cpp"
yy28:
	++cursor;
	goto yy20;
yy29:
	++cursor;
	goto yy23;
}
#line 92 "lexer.re"


yy_MACRO:
    
#line 414 "lexer.cpp"
{
	unsigned char yych;
	yych = *cursor;
	switch (yych) {
		case 0x00: goto yy31;
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy34;
		case '%': goto yy36;
		case ')': goto yy38;
		case ',': goto yy39;
		case '=': goto yy40;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy41;
		default: goto yy32;
	}
yy31:
	++cursor;
#line 148 "lexer.re"
	{ return {TOK_EOF, ""}; }
#line 487 "lexer.cpp"
yy32:
	yych = *++cursor;
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\r':
		case ' ':
		case '%':
		case ')':
		case ',':
		case '=': goto yy33;
		default: goto yy32;
	}
yy33:
#line 146 "lexer.re"
	{ return {TOK_TEXT, std::string(token_start, cursor)}; }
#line 505 "lexer.cpp"
yy34:
	yych = *++cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy34;
		default: goto yy35;
	}
yy35:
#line 108 "lexer.re"
	{ return {TOK_SPACE, std::string(token_start, cursor)}; }
#line 518 "lexer.cpp"
yy36:
	yych = *(marker = ++cursor);
	switch (yych) {
		case '#': goto yy43;
		case '%': goto yy45;
		case '(': goto yy46;
		case '-': goto yy48;
		case '/': goto yy49;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy50;
		case '{': goto yy51;
		case '}': goto yy52;
		default: goto yy37;
	}
yy37:
#line 144 "lexer.re"
	{ return {TOK_TEXT, "%"}; }
#line 587 "lexer.cpp"
yy38:
	++cursor;
#line 102 "lexer.re"
	{
        state_stack.pop_back();
        return {TOK_CLOSE_PAREN, ")"};
    }
#line 595 "lexer.cpp"
yy39:
	++cursor;
#line 106 "lexer.re"
	{ return {TOK_COMMA, ","}; }
#line 600 "lexer.cpp"
yy40:
	++cursor;
#line 107 "lexer.re"
	{ return {TOK_EQUAL, "="}; }
#line 605 "lexer.cpp"
yy41:
	yych = *++cursor;
	switch (yych) {
		case 0x00:
		case '\t':
		case '\n':
		case '\r':
		case ' ':
		case '%':
		case ')':
		case ',':
		case '=': goto yy42;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy41;
		default: goto yy32;
	}
yy42:
#line 141 "lexer.re"
	{ return {TOK_IDENT, std::string(token_start, cursor)}; }
#line 686 "lexer.cpp"
yy43:
	yych = *++cursor;
	switch (yych) {
		case 0x00: goto yy44;
		case '\n': goto yy53;
		default: goto yy43;
	}
yy44:
#line 121 "lexer.re"
	{ return {TOK_LINE_COMMENT, std::string(token_start, cursor)}; }
#line 697 "lexer.cpp"
yy45:
	++cursor;
#line 126 "lexer.re"
	{ return {TOK_SPECIAL, "%%"}; }
#line 702 "lexer.cpp"
yy46:
	yych = *++cursor;
	switch (yych) {
		case ')':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy47;
		default: goto yy55;
	}
yy47:
	cursor = marker;
	goto yy37;
yy48:
	yych = *++cursor;
	switch (yych) {
		case '-': goto yy56;
		default: goto yy47;
	}
yy49:
	yych = *++cursor;
	switch (yych) {
		case '*': goto yy58;
		case '/': goto yy59;
		default: goto yy47;
	}
yy50:
	yych = *++cursor;
	switch (yych) {
		case '(': goto yy61;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy50;
		case '{': goto yy62;
		case '}': goto yy63;
		default: goto yy47;
	}
yy51:
	++cursor;
#line 111 "lexer.re"
	{ 
        state_stack.push_back(BLOCK);
        return {TOK_BLOCK_OPEN, "%{"}; 
    }
#line 813 "lexer.cpp"
yy52:
	++cursor;
#line 115 "lexer.re"
	{
        if (state_stack.size() > 1) state_stack.pop_back();
        return {TOK_BLOCK_CLOSE, "%}"};
    }
#line 821 "lexer.cpp"
yy53:
	++cursor;
	goto yy44;
yy54:
	yych = *++cursor;
yy55:
	switch (yych) {
		case ')': goto yy64;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy54;
		default: goto yy47;
	}
yy56:
	yych = *++cursor;
	switch (yych) {
		case 0x00: goto yy57;
		case '\n': goto yy65;
		default: goto yy56;
	}
yy57:
#line 120 "lexer.re"
	{ return {TOK_LINE_COMMENT, std::string(token_start, cursor)}; }
#line 905 "lexer.cpp"
yy58:
	++cursor;
#line 122 "lexer.re"
	{
        state_stack.push_back(COMMENT);
        return {TOK_COMMENT_OPEN, "%/*"};
    }
#line 913 "lexer.cpp"
yy59:
	yych = *++cursor;
	switch (yych) {
		case 0x00: goto yy60;
		case '\n': goto yy66;
		default: goto yy59;
	}
yy60:
#line 119 "lexer.re"
	{ return {TOK_LINE_COMMENT, std::string(token_start, cursor)}; }
#line 924 "lexer.cpp"
yy61:
	++cursor;
#line 136 "lexer.re"
	{
        state_stack.push_back(MACRO);
        return {TOK_MACRO, std::string(token_start, cursor)};
    }
#line 932 "lexer.cpp"
yy62:
	++cursor;
#line 128 "lexer.re"
	{
        state_stack.push_back(BLOCK);
        return {TOK_BLOCK_OPEN, std::string(token_start, cursor)};
    }
#line 940 "lexer.cpp"
yy63:
	++cursor;
#line 132 "lexer.re"
	{
        if (state_stack.size() > 1) state_stack.pop_back();
        return {TOK_BLOCK_CLOSE, std::string(token_start, cursor)};
    }
#line 948 "lexer.cpp"
yy64:
	++cursor;
#line 110 "lexer.re"
	{ return {TOK_VAR, std::string(token_start, cursor)}; }
#line 953 "lexer.cpp"
yy65:
	++cursor;
	goto yy57;
yy66:
	++cursor;
	goto yy60;
}
#line 151 "lexer.re"


yy_COMMENT:
    
#line 966 "lexer.cpp"
{
	unsigned char yych;
	yych = *cursor;
	switch (yych) {
		case 0x00: goto yy68;
		case '%': goto yy71;
		default: goto yy69;
	}
yy68:
	++cursor;
#line 174 "lexer.re"
	{ return {TOK_EOF, ""}; }
#line 979 "lexer.cpp"
yy69:
	yych = *++cursor;
	switch (yych) {
		case 0x00:
		case '%': goto yy70;
		default: goto yy69;
	}
yy70:
#line 170 "lexer.re"
	{ return {TOK_TEXT, std::string(token_start, cursor)}; }
#line 990 "lexer.cpp"
yy71:
	yych = *(marker = ++cursor);
	switch (yych) {
		case '*': goto yy73;
		case '/': goto yy75;
		default: goto yy72;
	}
yy72:
#line 172 "lexer.re"
	{ return {TOK_TEXT, "%"}; }
#line 1001 "lexer.cpp"
yy73:
	yych = *++cursor;
	switch (yych) {
		case '/': goto yy76;
		default: goto yy74;
	}
yy74:
	cursor = marker;
	goto yy72;
yy75:
	yych = *++cursor;
	switch (yych) {
		case '*': goto yy77;
		default: goto yy74;
	}
yy76:
	++cursor;
#line 165 "lexer.re"
	{
        state_stack.pop_back();
        return {TOK_COMMENT_CLOSE, "%*/"};
    }
#line 1024 "lexer.cpp"
yy77:
	++cursor;
#line 161 "lexer.re"
	{
        state_stack.push_back(COMMENT);
        return {TOK_COMMENT_OPEN, "%/*"};
    }
#line 1032 "lexer.cpp"
}
#line 175 "lexer.re"

}
